syntax = "proto3";

package NSound.NService.NBase;

import "protos/client/base.proto"; 

/*
This file provides basic server responses, similar to client ones.
*/

// Base message - holder for base messages.
message TBaseMessage {

    // Pulled data (for record sreams)
    message TPull {
        bytes Data = 1;
    }

    // confirmation for directives
    message TDirectiveSatisfied {
        NSound.NClient.NBase.TBaseMessage.TStreamDirective.EDirective Directive = 1;
    }

    oneof Request {
        TPull Pull = 1;
        TDirectiveSatisfied DirectiveSatisfied = 2;
    }
}